# artdeco

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
src/artdeco/: __init__.py
tests/typing/: README.md  test_decorator_types.py
tests/unit/: test_decorator.py
