[project]
name = "py-artdeco"
version = "0.1.0"
description = "Method-aware sync/async decorator factories for Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
license = "MIT"
authors = [{ name = "Wim Yedema", email = "wim.yedema@gmail.com" }]
keywords = ["decorator", "async", "typing", "utility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/WimYedema/artdeco"
Repository = "https://github.com/WimYedema/artdeco"
Issues = "https://github.com/WimYedema/artdeco/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/artdeco"]

[tool.pyright]
include = ["src", "tests/typing"]
exclude = ["tests/unit"]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "build>=1.2.2",
    "pyright>=1.1.400",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
    "twine>=6.1.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
